--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -4,5 +4,7 @@
 <div class="post-entry">
     <h2>{{ posts.title }}</h2>
     <p>{{ posts.body }}</p>
+    <a href="{% url 'post_edit' posts.pk %}">+ Edit Blog Post</a> |
+    <a href="{% url 'post_delete' posts.pk %}">+ Delete Blog Post</a>
 </div>
 {% endblock content %}
